--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@line/bot-sdk": "^6.4.0",
-    "axios": "^0.18.0",
+    "axios": ">=0.21.1",
     "cache-manager": "^2.9.0",
     "chance": "^1.0.18",
     "express": "^4.16.4",
